syntax = "proto3";

package vn.trinhtung.grpc;

option java_package = "vn.trinhtung.grpc";
option java_multiple_files = true;


import "cinema.proto";

message HallResponse {
  int32 id = 1;
  string name = 2;
  CinemaResponse cinema = 3;
}

message GetHallByIdRequest {
  int32 id = 1;
}

message GetHallByIdResponse {
  HallResponse hall = 1;
}

message GetHallsByIdsRequest {
  repeated int32 ids = 1;
}

message GetHallsByIdsResponse {
  repeated HallResponse halls = 1;
}

service HallService {
  rpc getHallById(GetHallByIdRequest) returns (GetHallByIdResponse);

  rpc getHallsByIds(GetHallsByIdsRequest) returns (GetHallsByIdsResponse);
}